<resources>
<!--    注释掉，以免影响主APP的名称被覆盖-->
<!--    <string name="app_name">HFDemo</string>-->
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="connect">connect MCU</string>
    <string name="setting">setting</string>
    <string name="id">ID</string>
    <string name="count">count</string>
    <string name="inventory">Start Inventory</string>
    <string name="stop_inventory">Stop Inventory</string>
    <string name="clear">clear</string>
    <string name="membank">Membank</string>
    <string name="accesspassword">Access Password</string>
    <string name="addr">Address(word)</string>
    <string name="len">Length(word)</string>
    <string name="read">Read Tag</string>
    <string name="write">Write Tag</string>
    <string name="writedata">Write Data(HEX)</string>
    <string name="locktype">Lock Type</string>
    <string name="locktag">Lock Tag</string>
    <string name="kill">Kill Tag</string>
    <string name="killpassword">Kill Password</string>
    <string name="readdata">Read Data</string>
    <string name="back">Back</string>
    <string name="parameterSetting">Parameter Setting</string>
    <string name="sensitivity">Sensitivity</string>
    <string name="mixer_gain">Mixer Gain</string>
    <string name="IF_amp_gain">IF AMP Gain</string>
    <string name="threshold">Threshold</string>
    <string name="set">set</string>
    <string name="rfPower">RF power</string>
    <string name="workArea">Work Area</string>
    <string name="freqSetting">Freq setting</string>
    <string name="china2Freq">China2：920125kHz~924875kHz</string>
    <string name="usaFreq">USA：902250kHz~927750kHz</string>
    <string name="euFreq">Europe：865100kHz~867900kHz</string>
    <string name="china1Freq">China1：840125kHz~844875kHz</string>
    <string name="koreaFreq">Korea：917700kHz~923300kHz</string>
    <string name="setSuccess">Set success</string>
    <string name="setFail">Set Failed</string>
    <string name="freqNotNull">Frequency not null</string>
    <string name="power_dBm">Power(dBm): </string>
    <string name="plus">plus</string>
    <string name="minus">minus</string>
    <string name="serialPortPath">Serial Port Path</string>
    <string name="setPortPathTips">ReLanuch this App to take effect of the Serial Port Setting!</string>

</resources>