<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >


    <LinearLayout
        android:id="@+id/tableLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" >
         <LinearLayout
            android:id="@+id/LinearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
             >

            <TextView
                android:layout_width="0dp"
            	android:layout_height="wrap_content"
            	android:layout_weight="1"
            	android:gravity="left"
                android:text="EPC:" />

            <TextView
                android:id="@+id/textViewEPC"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayout10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
             >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="0dp"
            	android:layout_height="wrap_content"
            	android:layout_weight="1"
                android:text="@string/membank" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/accesspassword" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <Spinner 
                android:id="@+id/spinner_membank"
                android:layout_width="0dp"
            	android:layout_height="wrap_content"
            	android:layout_weight="1" />
            <EditText 
                android:id="@+id/editTextPassword"
                android:layout_width="0dp"
            	android:layout_height="wrap_content"
            	android:orientation="horizontal"
            	android:text="00000000"
            	android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                
                android:text="@string/addr" />
            <EditText 
                android:id="@+id/edittext_addr"
                android:layout_width="0dp"
            	android:layout_height="wrap_content"
            	android:inputType="number"
            	android:text="0"
            	android:layout_weight="1" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/len" />
            <EditText 
                android:id="@+id/edittext_length"
                android:layout_width="0dp"
            	android:layout_height="wrap_content"
            	android:text="1"
            	android:inputType="number"
            	android:layout_weight="1" /> 
            
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
		    <Button
                android:id="@+id/button_read"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/read" />

            <Button
                android:id="@+id/button_write"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/write" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/LinearLayout6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <TextView 
                android:layout_width="0dp"
            	android:layout_height="wrap_content"
            	android:layout_weight="1"
            	android:textSize="12sp"
            	android:text="@string/writedata"/>
            <EditText
                android:id="@+id/edittext_write"
                android:layout_width="0dp"
            	android:layout_height="wrap_content"
            	android:layout_weight="2"
            	/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/LinearLayout7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Spinner
                android:id="@+id/spinner_lock_memspace"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2" />
            <Spinner
                android:id="@+id/spinner_lock_type"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2" />
            <Button
                android:id="@+id/button_lock_6c"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/locktag" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/LinearLayout8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/killpassword" />
            <EditText
                android:id="@+id/edit_kill_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="00000000" />

            <Button
                android:id="@+id/button_kill_6c"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/kill" />
        </LinearLayout>
    </LinearLayout>

     <RelativeLayout
         android:id="@+id/relativeLayout2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/tableLayout1" >

         <TextView
             android:id="@+id/textViewreaddata"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/readdata" />

         <EditText
             android:id="@+id/linearLayout_readData"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_above="@+id/button_readClear"
             android:layout_below="@+id/textViewreaddata"
             android:layout_marginBottom="10dp"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
             android:clickable="false"
             android:focusable="false"
             android:gravity="top"
             android:textSize="12sp"
             android:background="@drawable/corners_background"
              >

         </EditText>
              <Button
         android:id="@+id/button_readClear"
         style="?android:attr/buttonStyleSmall"
         android:layout_width="wrap_content"
         android:layout_height="40dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:text="@string/clear" />

         <Button
         android:id="@+id/button_back"
         style="?android:attr/buttonStyleSmall"
         android:layout_width="wrap_content"
         android:layout_height="40dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:text="@string/back" />

     </RelativeLayout>



</RelativeLayout>