<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:orientation="horizontal"
			android:visibility="gone">

            <TextView
                android:id="@+id/TextView04"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/IF_amp_gain"
                android:textSize="20sp" />

             <Spinner
                 android:id="@+id/SpinnerMixerGain"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content" 
                 android:layout_weight="1"
                 android:gravity="center_vertical"
                 android:entries="@array/arr_mixerGain" />
            
			 <TextView
				 android:id="@+id/textViewMixerGain"
				 android:layout_width="wrap_content"
				 android:layout_height="wrap_content"
				 android:layout_gravity="center_vertical"
				 android:text="@string/mixer_gain"
				 android:textSize="20sp" 
				 />
			
			 <Spinner
				 android:id="@+id/SpinnerIFampGain"
				 android:layout_width="0dp"
				 android:layout_height="wrap_content"
				 android:layout_weight="1" 
				 android:gravity="center_vertical"
				 android:entries="@array/arr_IFampGain"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
			android:visibility="gone">

	        <TextView
	            android:id="@+id/textView1"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:layout_gravity="center_vertical"
	            android:text="@string/threshold"
	            android:textSize="20sp" />
	
	        <EditText
	            android:id="@+id/editText_threshold"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1" 
	            android:ems="5" />
	
	        <Button
	            android:id="@+id/button_set_threshold"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:text="@string/set"
	            android:textSize="20sp"
	            android:layout_weight="1"  />
            
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:orientation="horizontal"
        android:layout_below="@+id/linearLayout1" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/rfPower"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="0dp"
             android:layout_height="match_parent"
            android:layout_weight="1" />

        <Button
            android:id="@+id/button_set_power"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/set"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linearLayout2" >

        <TextView
            android:id="@+id/textView02"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/workArea"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/spinner3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Button
            android:id="@+id/button_set_work_area"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/set"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewTips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linearLayout3"
        android:layout_marginBottom="16dp" />

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewTips"
		android:visibility="gone">

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/serialPortPath"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editText_port_path"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:ems="5" />

        <Button
            android:id="@+id/button_set_path"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/set"
            android:textSize="20sp" />
    </LinearLayout>


</RelativeLayout>